# signalwire_adapter

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  processed_calls.json  pyproject.toml  requirements-dev.txt  run_tests.sh  signalwire_adapter.py  test_signalwire_adapter.py
.github/workflows/: docker-publish.yml
docker/: Dockerfile
