[tool.poetry]
name = "signalwire-adapter"
version = "0.1.0"
description = "A vCon adapter for Signalwire"
authors = ["Thomas Howe <ghostofbasho@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
signalwire = "^2.1.0"
python-dotenv = "^1.0.1"
vcon = "^0.5.0"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
requests-mock = "^1.11.0"

[tool.pytest.ini_options]
testpaths = ["test_signalwire_adapter.py"]
addopts = "-v --cov=signalwire_adapter --cov-report=term --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
